--- a/INFO1111 Group Project Template.tex
+++ b/INFO1111 Group Project Template.tex
@@ -5,7 +5,6 @@
 \usepackage{titlesec}
 \usepackage{fancyhdr}
 \usepackage{geometry}
-
 \usepackage[english]{babel}
 \usepackage{apacite}
 
@@ -45,7 +44,7 @@
         \hline
         Name & Student ID & Levels being attempted in this submission\\
         \hline
-        ?? & ?? & e.g. 1,2 \\
+        Priyongkar Kundu & 520518054 &  1 and 2 \\
         ?? & ?? & ?? \\
         ?? & ?? & ?? \\
         ?? & ?? & ?? \\
@@ -108,35 +107,34 @@ This section is completed as a team.\\
 Throughout your Computing degree we will help you learn a range of new skills. Once you graduate however you will need to continue to learn new languages, new tools, new applications, etc. For this section you need to identify 5 approaches you can take to this continual learning. You should then put these in order from most effective to least effective, and then explain the circumstances in which each approach might be appropriate. (Target = $\sim$100 words per skill = $\sim$500 words total).
 
 \subsection{Skills: Jason Kam : Computer Science}
+\subsubsection{Problem Solving}
+\text{Probably the most important skill for a computer scientist to have is the ability to problem solve as pretty it is essentially their main job. Whether it's debugging an existing program, using programming to solve a real issue or making a preexisting solution more efficient, having the ability to problem solve is a must have skillset for them. Good computer scientists will employ a variety of different skills that help them solve solutions such as practicing common problems, dividing big problems into sub problems and/or writing solutions in pseudocode first.}
 
-1. Problem Solving
-Probably the most important skill for a computer scientist to have is the ability to problem solve as pretty it is essentially their main job. Whether it's debugging an existing program, using programming to solve a real issue or making a preexisting solution more efficient, having the ability to problem solve is a must have skillset for them. Good computer scientists will employ a variety of different skills that help them solve solutions such as practicing common problems, dividing big problems into sub problems and/or writing solutions in pseudocode first.
+\subsubsection{Code Style}
+\text{The ability to write aesthetic code or in python, pythonic code is extremely important as most of the time, a programmers code will be viewed by other employees, which makes layout/readability an indispensable skill. Not only does it make it easier for someone including the programmer to debug the code should it not work properly, but it also reduces the chance of bugs occurring due to poor code writing style. Adding comments to their code as well as implementing classes/functions where necessary ensures that computer scientists write programs that are easier to follow/understand.}
 
-2. Code Style
-The ability to write aesthetic code or in python, "pythonic" code is extremely important as most of the time, a programmers code will be viewed by other employees, which makes layout/readability an indispensable skill. Not only does it make it easier for someone including the programmer to debug the code should it not work properly, but it also reduces the chance of bugs occurring due to poor code writing style. Adding comments to their code as well as implementing classes/functions where necessary ensures that computer scientists write programs that are easier to follow/understand.
+\subsubsection{Ethics}
+\text{Since utilizing search engines is an extremely important part of being a computer scientist, the ability to correctly reference code that has been reused is important not just in school but when employed. After all, if someone has written an much more efficient algorithm, then obviously a programmer should use it to improve their program. Other ethics that a computer scientist must be familiar with include data protection/privacy, which means taking into account the protection of private data when writing programs (e.g hashing passwords before storing it in a database).}
 
-3. Ethics
-Since utilizing search engines is an extremely important part of being a computer scientist, the ability to correctly reference code that has been reused is important not just in school but when employed. After all, if someone has written an much more efficient 
-algorithm, then obviously a programmer should use it to improve their program. Other ethics that a computer scientist must be familiar with include data protection/privacy, which means taking into account the protection of private data when writing programs (e.g hashing passwords before storing it in a database).
+\subsubsection{Use of Git/Github}
+\text{A computer scientist rarely works alone, and in order to effectively work on a project as a team, an external tool such as Git is vital to ensure that a project develops as intended. By utilizing Git, it allows a group of computer scientists to work together without creating any conflicts or bugs that may arise through the use of pulls, pushes, commits and branches. For example, if after a commit, a project no longer works, it is extremely easy to identify where the bug is occurring by looking at which branch of the project caused it to no longer work. Using Git also allows you to see which changes to a project are better by committing the updates to different branches.}
 
-4. Ability to use Git/Github
-A computer scientist rarely works alone, and in order to effectively work on a project as a team, an external tool such as Git is vital to ensure that a project develops as intended. By utilizing Git, it allows a group of computer scientists to work together without creating any conflicts or bugs that may arise through the use of pulls, pushes, commits and branches. For example, if after a commit, a project no longer works, it is extremely easy to identify where the bug is occurring by looking at which branch of the project caused it to no longer work. Using Git also allows you to see which changes to a project are better by committing the updates to different branches. 
+\subsubsection{Range of programming languages}
+\text{Having a wide range of languages in a computer scientists skillset allows them to program much more complicated and efficient programs. For example, designing a web application typically requires at minimum, the ability to code in Python, Javascript, HTML and CSS with most web applications also needing languages such as SQL in order to store data. Being able to program in both high and lower level languages also allows for much more flexibility, as both types of languages offer their own benefits to using it. For example, coding in C provides faster runtimes at the cost of user managed memory while Python does not require manual memory management but is slower than C due to being a higher level language.}
 
-5. Able to program in different languages
-Having a wide range of languages in a computer scientists skillset allows them to program much more complicated and efficient programs. For example, designing a web application typically requires at minimum, the ability to code in Python, Javascript, HTML and CSS with most web applications also needing languages such as SQL in order to store data. Being able to program in both high and lower level languages also allows for much more flexibility, as both types of languages offer their own benefits to using it. For example, coding in C provides faster runtimes at the cost of user managed memory while Python does not require manual memory management but is slower than C due to being a higher level language.
-
-6. Communication
-Communication is an important skill that anybody working any job requires and a computer scientist is no different. The ability to communicate effectively to fellow employees and their bosses allows them to understand what goals need to be achieved, including the exact specifications that their program needs to meet. Without good communication, a computer scientist may not completely understand the problem at hand which renders their skillsets useless. Having the capacity to communicate properly with other employees can also allow a computer scientist to learn new skills, since typically in a project team, each person is assigned a different task depending on their respective skillset.
+\subsubsection{Communication}
+\text{Communication is an important skill that anybody working any job requires and a computer scientist is no different. The ability to communicate effectively to fellow employees and their bosses allows them to understand what goals need to be achieved, including the exact specifications that their program needs to meet. Without good communication, a computer scientist may not completely understand the problem at hand which renders their skillsets useless. Having the capacity to communicate properly with other employees can also allow a computer scientist to learn new skills, since typically in a project team, each person is assigned a different task depending on their respective skillset.}
 
 
-7. Searching skills
-With all the different languages, algorithms and data structures that exist in programming, computer scientist typically cannot remember all of them. Therefore, the ability to efficiently use search engines such as google in order to find solutions or remember syntax from a language that they might not have coded in for a long time is extremely important. After all, there is no need to waste memory space on trivial things that can be googled anyway and computer science/programming encompasses this idea entirely. This allows programmers to focus on remembering more important things such as the most useful and common algorithms and data structures used in common problems, or refine their ability to code in a main language such as Python without having to worry about remembering all niche solutions or the syntax in every language.
+\subsubsection{Searching Skills}
+\text{With all the different languages, algorithms and data structures that exist in programming, computer scientist typically cannot remember all of them. Therefore, the ability to efficiently use search engines such as google in order to find solutions or remember syntax from a language that they might not have coded in for a long time is extremely important. After all, there is no need to waste memory space on trivial things that can be googled anyway and computer science/programming encompasses this idea entirely. This allows programmers to focus on remembering more important things such as the most useful and common algorithms and data structures used in common problems, or refine their ability to code in a main language such as Python without having to worry about remembering all niche solutions or the syntax in every language.}
 
-8. Knowledge of Algorithms and Data Structures
-As a computer scientist, just being able to solve a solution is typically not enough. By having an extensive knowledge on different algorithms and data structures, they should be able to design a program that solves a solution using the most optimal time and space. For example, typically solutions that are done through brute force may have badly optimised times such as O(n^2) time or a solution that is fast but has poor space management. Using algorithms such as binary search, divide and conquer, sliding windows can often drastically cut time and space that a program takes. Data structures such as hash tables, binary search trees, lists can also help optimize time, but good computer scientists will understand the importance between balancing space and time optimization, as speeding up programs may often increase the amount of space that needs to be allocated and vice versa.
+\subsubsection{Knowledge of algorithms and data structures}
+\text{As a computer scientist, just being able to solve a solution is typically not enough. By having an extensive knowledge on different algorithms and data structures, they should be able to design a program that solves a solution using the most optimal time and space. For example, typically solutions that are done through brute force may have badly optimised times such as $O(n^2)$ time or a solution that is fast but has poor space management. Using algorithms such as binary search, divide and conquer, sliding windows can often drastically cut time and space that a program takes. Data structures such as hash tables, binary search trees, lists can also help optimize time, but good computer scientists will understand the importance between balancing space and time optimization, as speeding up programs may often increase the amount of space that needs to be allocated and vice versa.}
 
 
-\subsection{Skills: add student 2 name here : Data Science}
+\subsection{Skills: Priyongkar Kundu : Data Science}
+\subsubsection{}
 
 Your text goes here
 
@@ -158,13 +156,13 @@ Level 2 focuses on initial evaluation of the tech stack that is used by a select
 
 Each student should choose a different tech stack and explain the role of each of the different technologies in that stack. Note that prior to researching your proposed tech stack and spending time writing about it, it might be a good idea to check with your tutor as to whether your chosen stack is suitable. (Target = $\sim$200-400 words per student).
 
-\subsection{Tech Stack: add student 1 name here}
+\subsection{LAMP: Priyongkar Kundu}
 
 Your text goes here
 
-\subsection{Tech Stack: add student 2 name here}
+\subsection{MEAN: Jason Kam}
 
-Your text goes here
+MEAN is a tech stack used to create full stack web apps and boost development speed (RSWebSols, 2022). It is utilized by companies such as LinkedIn, Netflix, Uber and Ebay (RSWebSols, 2022). The stack consists of MongoDB, Express and Node.js for back-end development, and AngularJS for front-end. Since the front-end, back-end and database of this tech stack are all built on JavaScript, it allows for smooth functionality between all parts of the web applications (IBM, 2019). AngularJS is a JavaScript framework which is used to effectively build the user interface of the application. It is an extremely popular front-end framework due to it's basic templates, ability to develop for both mobile and desktop use simultaneously and fast performance (IBM, 2019). The part of the tech stack that handles data is MongoDB, which is a NoSQL database designed for cloud applications (IBM, 2019). One major advantage of using a NoSQL database as opposed to an SQL database is the ability to handle and store large amounts of data (IBM, 2021). The most important part of this tech stack is Node.js, which is another JavaScript framework which is used to process connections to the web server. The greatest strength of Node.js is its scalability, as it can support as many as a million simultaneous connections (IBM, 2019). The last part of the MEAN stack is Express, which is used in conjunction with Node.js in order to process data being sent from the front-end/user-side to the database (IBM, 2019).
 
 \subsection{Tech Stack: add student 3 name here}
 
